# amplifier-module-image-generation

./: HOW_THIS_MODULE_WAS_MADE.md  NANO_BANANA_PRO.md  README.md  TOOL_MODULE_UPGRADE.md  pyproject.toml
amplifier_module_image_generation/: __init__.py  clients.py
amplifier_module_tool_image_generation/: __init__.py  tool.py
examples/: basic_usage.py
src/amplifier_module_image_generation/: __init__.py  generator.py  models.py  nano_banana_client.py  protocol.py  tool.py
tests/: test_clients.py  test_generator.py  test_models.py  test_tool.py
